--- a/AepX/Resources/Info.plist
+++ b/AepX/Resources/Info.plist
@@ -13,5 +13,7 @@
 	<string>UIStatusBarStyleLightContent</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
